<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodregree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="toast_text_begin">This button will launch my </string>
    <string name="toast_text_end"> app!</string>
</resources>
