<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fabioluis.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/Title"
        android:text="@string/my_nanodregree_apps" />

    <Button
        android:id="@+id/button_popular_movies"
        style="@style/Button"
        android:layout_below="@+id/title"
        android:text="@string/popular_movies"
        android:onClick="showToast"/>

    <Button
        android:id="@+id/button_stock_hawk"
        style="@style/Button"
        android:layout_below="@+id/button_popular_movies"
        android:text="@string/stock_hawk"
        android:onClick="showToast"/>

    <Button
        android:id="@+id/button_build_it_bigger"
        style="@style/Button"
        android:layout_below="@+id/button_stock_hawk"
        android:text="@string/build_it_bigger"
        android:onClick="showToast"/>

    <Button
        android:id="@+id/button_make_your_app_material"
        style="@style/Button"
        android:layout_below="@+id/button_build_it_bigger"
        android:text="@string/make_your_app_material"
        android:onClick="showToast"/>

    <Button
        android:id="@+id/button_go_ubiquitous"
        style="@style/Button"
        android:layout_below="@+id/button_make_your_app_material"
        android:text="@string/go_ubiquitous"
        android:onClick="showToast"/>

    <Button
        android:id="@+id/button_capstone"
        style="@style/Button"
        android:layout_below="@+id/button_go_ubiquitous"
        android:text="@string/capstone"
        android:onClick="showToast"/>
</RelativeLayout>
